# inventario_alcret

./: .dockerignore  .env.ec2.example  .env.example  .gitignore  ARQUITECTURA.md  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml
.github/workflows/: ci.yml  deploy-ec2.yml  deploy.yml
apps/alertas/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
apps/auditoria/: __init__.py  admin.py  apps.py  auth_views.py  models.py  signals.py  urls.py  views.py
apps/integracion/: __init__.py  admin.py  apps.py  models.py  services.py  signals.py  tasks.py
apps/inventario/: __init__.py  admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
apps/metricas/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
apps/shared/: middleware.py  services.py  value_objects.py
apps/usuarios/: __init__.py  admin.py  apps.py  models.py  signals.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  development.py  ec2.py  production.py
docs/: ERD.md
nginx/: nginx.conf
requirements/: base.txt  development.txt  production.txt
static/: manifest.json  sw.js
static/js/: app.js
templates/: base.html  base_public.html  dashboard.html
templates/alertas/: alertas_list.html
templates/auditoria/: auditlog_list.html
templates/components/: bottom_nav.html  sidebar.html  toast.html  topbar.html
templates/inventario/: almacen_form.html  almacen_list.html  categoria_form.html  categoria_list.html  movimiento_form.html  (+4 more)
(+41 files in other folders)
