[project]
name = "inventario-pwa"
version = "1.0.0"
description = "Sistema de inventario PWA con Django, Alpine.js y Tailwind"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "ARG", "SIM"]
ignore = ["SIM115"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F405"]
"*/migrations/*.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.isort]
profile = "django"
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
testpaths = ["apps"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
